[gd_scene load_steps=12 format=3 uid="uid://cdlo6c2ypvpwg"]

[ext_resource type="Script" path="res://sources/game/prefabs/bullets/scp_projectile_001.gd" id="1_2lssu"]
[ext_resource type="Texture2D" uid="uid://4gd05xwlcgpe" path="res://assets/textures/bullets/tx_bullet_01.png" id="2_uungu"]
[ext_resource type="Texture2D" uid="uid://b5w5afg47op8f" path="res://assets/textures/bullets/spreads/tx_bullet_spread_01.png" id="3_mky2j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dhtgy"]
atlas = ExtResource("3_mky2j")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivi8j"]
atlas = ExtResource("3_mky2j")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_th6rs"]
atlas = ExtResource("3_mky2j")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_olqel"]
atlas = ExtResource("3_mky2j")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7j0l"]
atlas = ExtResource("3_mky2j")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_scpmq"]
atlas = ExtResource("3_mky2j")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pu7bl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhtgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivi8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_th6rs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_olqel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7j0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_scpmq")
}],
"loop": false,
"name": &"default",
"speed": 24.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5vixh"]
size = Vector2(12, 10)

[node name="BaseProjectile" type="Area2D"]
position = Vector2(0, 1)
collision_layer = 130
collision_mask = 130
script = ExtResource("1_2lssu")
bullet_speed = 10.0

[node name="BulletSprite" type="Sprite2D" parent="."]
position = Vector2(-0.5, 2.5)
scale = Vector2(0.9375, 0.4375)
texture = ExtResource("2_uungu")

[node name="Spread" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pu7bl")

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5vixh")

[node name="TimeLeft" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="animation_finished" from="Spread" to="." method="_on_spread_animation_finished"]
[connection signal="timeout" from="TimeLeft" to="." method="_on_time_left_timeout"]
